src/bin/snapshots/snapshots__Expr.arithmetic.input.snap
---
created: "2019-08-25T01:01:25.355353066Z"
creator: insta@0.7.4
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    Expr {
        attrs: [],
        kind: ExprKind::Binary {
            left: Expr {
                attrs: [],
                kind: ExprKind::Literal,
            },
            op: BinaryOp::Mul,
            right: Expr {
                attrs: [],
                kind: ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                    op: BinaryOp::Add,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Div,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Binary {
                                    left: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                    op: BinaryOp::Sub,
                                    right: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                },
                            },
                        } | ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Binary {
                                    left: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                    op: BinaryOp::Div,
                                    right: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                },
                            },
                            op: BinaryOp::Sub,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                } | ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Add,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                    op: BinaryOp::Div,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Sub,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                } | ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Add,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Binary {
                                    left: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                    op: BinaryOp::Div,
                                    right: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                },
                            },
                        } | ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Binary {
                                    left: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                    op: BinaryOp::Add,
                                    right: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                },
                            },
                            op: BinaryOp::Div,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                    op: BinaryOp::Sub,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                },
            },
        } | ExprKind::Binary {
            left: Expr {
                attrs: [],
                kind: ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                    op: BinaryOp::Mul,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                },
            },
            op: BinaryOp::Add,
            right: Expr {
                attrs: [],
                kind: ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                    op: BinaryOp::Div,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Sub,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                } | ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Div,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                    op: BinaryOp::Sub,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                },
            },
        } | ExprKind::Binary {
            left: Expr {
                attrs: [],
                kind: ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                    op: BinaryOp::Mul,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Add,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                } | ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Mul,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                    op: BinaryOp::Add,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                },
            },
            op: BinaryOp::Div,
            right: Expr {
                attrs: [],
                kind: ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                    op: BinaryOp::Sub,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                },
            },
        } | ExprKind::Binary {
            left: Expr {
                attrs: [],
                kind: ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                    op: BinaryOp::Mul,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Add,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Binary {
                                    left: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                    op: BinaryOp::Div,
                                    right: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                },
                            },
                        } | ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Binary {
                                    left: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                    op: BinaryOp::Add,
                                    right: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                },
                            },
                            op: BinaryOp::Div,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                } | ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Mul,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                    op: BinaryOp::Add,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Div,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                } | ExprKind::Binary {
                    left: Expr {
                        attrs: [],
                        kind: ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                            op: BinaryOp::Mul,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Binary {
                                    left: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                    op: BinaryOp::Add,
                                    right: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                },
                            },
                        } | ExprKind::Binary {
                            left: Expr {
                                attrs: [],
                                kind: ExprKind::Binary {
                                    left: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                    op: BinaryOp::Mul,
                                    right: Expr {
                                        attrs: [],
                                        kind: ExprKind::Literal,
                                    },
                                },
                            },
                            op: BinaryOp::Add,
                            right: Expr {
                                attrs: [],
                                kind: ExprKind::Literal,
                            },
                        },
                    },
                    op: BinaryOp::Div,
                    right: Expr {
                        attrs: [],
                        kind: ExprKind::Literal,
                    },
                },
            },
            op: BinaryOp::Sub,
            right: Expr {
                attrs: [],
                kind: ExprKind::Literal,
            },
        },
    },
)
