src/bin/snapshots/snapshots__GenericArgs.binding-before-lifetime.error.input.snap
---
created: "2019-08-24T22:44:34.221417271Z"
creator: insta@0.7.4
source: src/bin/snapshots.rs
expression: forest
---
Err(
    ParseError {
        at: Span,
        expected: [
            [
                Ident(
                    None,
                ),
            ],
            [
                Punct {
                    ch: Some(
                        '>',
                    ),
                    joint: None,
                },
            ],
        ],
    },
)
