src/bin/snapshots/snapshots__GenericArgs.binding-multi.input.snap
---
created: "2019-06-02T15:47:35.231455Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    GenericArgs::AngleBracket {
        args_and_bindings: AngleBracketGenericArgsAndBindings::Bindings(
            [
                TypeBinding {
                    name: _,
                    ty: Type::Path(
                        QPath::Unqualified(
                            Path {
                                path: RelativePath {
                                    segments: [
                                        PathSegment {
                                            ident: _,
                                        },
                                    ],
                                },
                            },
                        ),
                    ) | Type::DynTrait {
                        bounds: [
                            TypeBound::Trait(
                                TypeTraitBound {
                                    path: Path {
                                        path: RelativePath {
                                            segments: [
                                                PathSegment {
                                                    ident: _,
                                                },
                                            ],
                                        },
                                    },
                                },
                            ),
                        ],
                    },
                },
                TypeBinding {
                    name: _,
                    ty: Type::Path(
                        QPath::Unqualified(
                            Path {
                                path: RelativePath {
                                    segments: [
                                        PathSegment {
                                            ident: _,
                                        },
                                    ],
                                },
                            },
                        ),
                    ) | Type::DynTrait {
                        bounds: [
                            TypeBound::Trait(
                                TypeTraitBound {
                                    path: Path {
                                        path: RelativePath {
                                            segments: [
                                                PathSegment {
                                                    ident: _,
                                                },
                                            ],
                                        },
                                    },
                                },
                            ),
                        ],
                    },
                },
            ],
        ),
    },
)
