src/bin/snapshots/snapshots__GenericArgs.comma.error.input.snap
---
created: "2019-08-25T02:12:18.716683672Z"
creator: insta@0.7.4
source: src/bin/snapshots.rs
expression: forest
---
Err(
    ParseError {
        at: Span,
        expected: [
            "(",
            "[",
            IDENT,
            "_",
            "dyn",
            "extern",
            "fn",
            "for",
            "impl",
            "typeof",
            "unsafe",
            "!",
            "&",
            LIFETIME,
            "*",
            "::",
            "<",
            ">",
            "?",
        ],
    },
)
