src/bin/snapshots/snapshots__GenericArgs.empty.input.snap
---
created: "2019-06-02T15:36:47.092919Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    GenericArgs::AngleBracket,
)
