src/bin/snapshots/snapshots__GenericArgs.fn-empty.input.snap
---
created: "2019-06-02T15:36:47.254695Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    GenericArgs::Paren {
        inputs: [],
    },
)
